Updating .gitignore file and removing unnecessary data from git repo

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.rcg filter=lfs diff=lfs merge=lfs -text
 *.rcl filter=lfs diff=lfs merge=lfs -text
+.json filter=lfs diff=lfs merge=lfs -text
